deriving-310/tests/rejected/privaterows1.ml
(* Private rows are currently not supported *)
type poly4 = private [< `A]
